--- a/index.html
+++ b/index.html
@@ -12,34 +12,32 @@
     <div class="container">
         <h1>محاسبه‌گر رهن و اجاره</h1>
 
-        <form id="rentCalculationForm">
+        <div id="rentCalculationForm">
             <label for="lastYearRent">اجاره سال گذشته (تومان):</label>
-            <input type="number" id="lastYearRent" placeholder="مثلاً ۵,۰۰۰,۰۰۰" required>
+            <input type="number" id="lastYearRent" placeholder="مثلاً ۹,۰۰۰,۰۰۰" min="0">
 
             <label for="lastYearMortgage">رهن سال گذشته (تومان):</label>
-            <input type="number" id="lastYearMortgage" placeholder="مثلاً ۱۰۰,۰۰۰,۰۰۰" required>
+            <input type="number" id="lastYearMortgage" placeholder="مثلاً ۱۵۰,۰۰۰,۰۰۰" min="0">
 
             <label for="nextYearMortgage">رهن سال آینده (تومان):</label>
-            <input type="number" id="nextYearMortgage" placeholder="مثلاً ۱۲۰,۰۰۰,۰۰۰" required>
+            <input type="number" id="nextYearMortgage" placeholder="مثلاً ۴۰۰,۰۰۰,۰۰۰" min="0">
 
             <label for="effectiveRate">نرخ بهرهٔ مؤثر سالانه (درصد):</label>
-            <input type="number" id="effectiveRate" placeholder="مثلاً ۲۰" step="0.01" required>
+            <input type="number" id="effectiveRate" placeholder="مثلاً ۳۷" step="0.01" min="0">
 
             <hr>
             <h2>محاسبه</h2>
             <p>یکی از دو فیلد زیر را وارد کنید:</p>
 
             <label for="nextYearRent">اجاره سال آینده (تومان):</label>
-            <input type="number" id="nextYearRent" placeholder="برای محاسبه درصد افزایش">
+            <input type="number" id="nextYearRent" placeholder="برای محاسبه درصد افزایش" min="0">
 
             <label for="rentIncreasePercent">افزایش اجاره (درصد):</label>
             <input type="number" id="rentIncreasePercent" placeholder="برای محاسبه اجاره سال آینده" step="0.01">
 
-            <button type="submit">محاسبه</button>
-        </form>
-
+        </div>
         <div id="resultContainer" class="result">
-            <p id="resultText"></p>
+            <p id="resultText">لطفاً مقادیر مورد نیاز را وارد کنید.</p>
         </div>
     </div>
 
